# zephyr-promicro-nrf52840-mcuboot-template

./: .gitignore  CMakeLists.txt  Kconfig  Readme.md  mcuboot.conf  overlay-debug.conf  prj.conf  sysbuild.conf
.github/workflows/: Build Zephyr Firmware  Test2.yml  build-mcuboot.yml  build_zephyr.yml  test.yml
boards/: promicro_nrf52840.conf  promicro_nrf52840.overlay
boards/promicro_nrf52840/: Kconfig  Kconfig.defconfig  Kconfig.promicro_nrf52840  board.yml  promicro_nrf52840_nrf52840.dts  promicro_nrf52840_nrf52840.yaml
src/: main.c
src/reset/: reset_handler.c  retained_ram.ld
